--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
         "php": ">=5.2",
         "phpseclib/phpseclib": "^1.0"
     },
+    "include-path": ["open_id_connect_client_52/"],
+    "autoload": {
+        "psr-0": {
+            "oidclient": "src/",
+        }
+    },
     "config": {
         "optimize-autoloader": true,
         "sort-packages": true,
